clusters/production/automation/doubletake/doubletake-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: double-take
    app.kubernetes.io/name: double-take
  name: double-take
  namespace: automation
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: double-take
    app.kubernetes.io/name: double-take
  type: ClusterIP
