clusters/production/automation/doubletake/doubletake-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: doubletake
  namespace: default
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - doubletake.rees.ca
  rules:
  - backendRefs:
    - name: double-take
      port: 3000
